# Handy-API

./: build.bat  package.json  tailwind.config.js
android-app/: build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp  whisper-jni.cpp
android-app/app/src/main/java/com/handy/voice/: HandyVoiceApp.kt  MainActivity.kt
android-app/app/src/main/java/com/handy/voice/audio/: AudioPlayer.kt  AudioProcessor.kt  AudioRecorder.kt
android-app/app/src/main/java/com/handy/voice/di/: AppModule.kt
android-app/app/src/main/java/com/handy/voice/models/: ModelDownloader.kt  ModelManager.kt
android-app/app/src/main/java/com/handy/voice/stt/: WhisperEngine.kt
android-app/app/src/main/java/com/handy/voice/tts/: AudioTokenDecoder.kt  LLMEngine.kt  QwenTTSEngine.kt  VoiceCloneManager.kt
android-app/app/src/main/java/com/handy/voice/ui/: ChatScreen.kt  ChatViewModel.kt  MainScreen.kt  STTScreen.kt  STTViewModel.kt  SettingsScreen.kt  SettingsViewModel.kt  TTSScreen.kt  TTSViewModel.kt  VoiceCloneScreen.kt  VoiceCloneViewModel.kt
android-app/app/src/main/java/com/handy/voice/ui/theme/: Theme.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/scripts/: verify_qwen3_tts.py
src/: bindings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  lib.rs
src-tauri/src/managers/: model.rs
src/components/model-selector/: ModelDropdown.tsx
src/components/onboarding/: ModelCard.tsx
src/components/settings/advanced/: AdvancedSettings.tsx
src/components/settings/general/: ModelSettingsCard.tsx
src/components/settings/models/: ModelsSettings.tsx
src/i18n/locales/ar/: translation.json
src/i18n/locales/cs/: translation.json
src/i18n/locales/de/: translation.json
src/i18n/locales/en/: translation.json
src/i18n/locales/es/: translation.json
src/i18n/locales/fr/: translation.json
src/i18n/locales/it/: translation.json
src/i18n/locales/ja/: translation.json
src/i18n/locales/ko/: translation.json
src/i18n/locales/pl/: translation.json
src/i18n/locales/pt/: translation.json
src/i18n/locales/ru/: translation.json
src/i18n/locales/tr/: translation.json
src/i18n/locales/uk/: translation.json
src/i18n/locales/vi/: translation.json
src/i18n/locales/zh/: translation.json
src/lib/constants/: languages.ts
transcribe-rs-local/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
transcribe-rs-local/examples/: moonshine.rs  openai.rs  parakeet.rs  whisper.rs  whisperfile.rs
transcribe-rs-local/src/: lib.rs
transcribe-rs-local/src/engines/: mod.rs  whisper.rs
transcribe-rs-local/src/engines/moonshine/: mod.rs  model.rs  tokenizer.rs
transcribe-rs-local/tests/: moonshine.rs  openai.rs  parakeet.rs  whisper.rs  whisperfile.rs
